# Rz

./: .replit  package-lock.json  package.json  tsconfig.json  webpack.config.js
backend/: Cargo.toml
backend/src/: main.rs
backend/src/db/: mongodb.rs  postgres.rs
backend/src/middleware/: auth.rs
backend/src/models/: blog.rs  course.rs  mod.rs  portfolio.rs  user.rs
backend/src/routes/: admin.rs  auth.rs  blog.rs  courses.rs  mod.rs  portfolio.rs
backend/src/search/: advanced_algorithm.rs  algorithms.rs  api.rs  mod.rs
frontend/: pubspec.yaml
frontend/lib/: app.dart  main.dart
frontend/lib/constants/: strings.dart  theme.dart
frontend/lib/models/: blog_post.dart  blog_post.g.dart  course.dart  course.g.dart  portfolio_item.dart  portfolio_item.g.dart  user.dart  user.g.dart
frontend/lib/providers/: auth_provider.dart  blog_provider.dart  course_provider.dart  portfolio_provider.dart
frontend/lib/screens/admin/: admin_dashboard.dart  manage_blog.dart  manage_courses.dart  manage_courses_fixed.dart  manage_users.dart
frontend/lib/screens/blog/: blog_post_screen.dart  blog_screen.dart
frontend/lib/screens/courses/: course_detail_screen.dart  (+1 more)
frontend/lib/services/: api_service.dart  auth_service.dart  solana_service.dart
frontend/lib/widgets/: app_drawer.dart  blog_post_card.dart  course_card.dart  custom_button.dart  portfolio_grid.dart
public/: index.html
react-frontend/: package.json
src/: App.tsx
src/components/layout/: Footer.css  Footer.tsx  Header.css  Header.tsx
src/pages/: Blog.css  Blog.tsx  BlogPost.tsx  CourseDetail.tsx  Courses.css  Courses.tsx  Dashboard.tsx  Home.css  Home.tsx  Login.css  Login.tsx  NotFound.css  NotFound.tsx  Portfolio.css  Portfolio.tsx  Register.tsx
src/styles/: App.css  index.css
web-frontend/: package.json
(+4 files in other folders)
