[package]
name = "hex_the_add_hub_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
chrono = { version = "0.4.24", features = ["serde"] }
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
mongodb = "2.5.0"
bson = { version = "2.6.0", features = ["chrono-0_4"] }
tokio-postgres = "0.7.8"
deadpool-postgres = "0.10.5"
postgres-types = { version = "0.2.5", features = ["derive"] }
config = "0.13.3"
solana-sdk = "1.16.3"
solana-client = "1.16.3"
actix-web-httpauth = "0.8.0"
unicode-segmentation = "1.10.1"
rayon = "1.7.0"
itertools = "0.11.0"
async-trait = "0.1.74"
regex = "1.9.5"
once_cell = "1.18.0"
